--- a/app/src/main/res/layout/activity_alphabet.xml
+++ b/app/src/main/res/layout/activity_alphabet.xml
@@ -40,14 +40,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.50121653" />
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="450dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="27dp">
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -104,9 +107,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="0dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -181,9 +184,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -258,9 +261,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -335,9 +338,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -412,9 +415,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -489,9 +492,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -566,9 +569,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -643,9 +646,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -720,9 +723,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -797,9 +800,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -874,9 +877,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -951,9 +954,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
@@ -1028,9 +1031,9 @@
                         android:layout_width="175dp"
                         android:layout_height="150dp"
                         android:layout_column="1"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginBottom="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="8dp"
